// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardStack /> should re-render correctly when "go" action is called 1`] = `
<Text>
  Goodbye
</Text>
`;

exports[`<CardStack /> should re-render correctly when "go" action is called 2`] = `
<Text>
  Index
</Text>
`;

exports[`<CardStack /> should re-render correctly when "go" action is called with same path 1`] = `
<Text>
  3
</Text>
`;

exports[`<CardStack /> should re-render correctly when "go" action is called with same path 2`] = `
<Text>
  1
</Text>
`;

exports[`<CardStack /> should re-render correctly when "goBack" action is called 1`] = `
<Text>
  Hello
</Text>
`;

exports[`<CardStack /> should re-render correctly when "goBack" action is called 2`] = `
<Text>
  Index
</Text>
`;

exports[`<CardStack /> should re-render correctly when "goBack" action is called with same path 1`] = `
<Text>
  2
</Text>
`;

exports[`<CardStack /> should re-render correctly when "goBack" action is called with same path 2`] = `
<Text>
  1
</Text>
`;

exports[`<CardStack /> should re-render correctly when "onNavigationBack" action is called 1`] = `
<Text>
  Hello
</Text>
`;

exports[`<CardStack /> should re-render correctly when "onNavigationBack" action is called 2`] = `
<Text>
  Index
</Text>
`;

exports[`<CardStack /> should re-render correctly when "push" action is called 1`] = `
<Text>
  Index
</Text>
`;

exports[`<CardStack /> should re-render correctly when "push" action is called 2`] = `
<Text>
  Hello
</Text>
`;

exports[`<CardStack /> should re-render correctly when "push" action is called with same path 1`] = `
<Text>
  1
</Text>
`;

exports[`<CardStack /> should re-render correctly when "push" action is called with same path 2`] = `
<Text>
  2
</Text>
`;

exports[`<CardStack /> should re-render correctly when "replace" action is called 1`] = `
<Text>
  Hello
</Text>
`;

exports[`<CardStack /> should re-render correctly when "replace" action is called 2`] = `
<Text>
  Goodbye
</Text>
`;

exports[`<CardStack /> should render correctly with basic url 1`] = `
<Text>
  Index
</Text>
`;

exports[`<CardStack /> should render correctly with complex url 1`] = `
<Text>
  1
</Text>
`;

exports[`<CardStack /> should render correctly with initialIndex and initialEntries props 1`] = `
<Text>
  Hello
</Text>
`;
